# SBOSS-ERPNEXT-AM

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README-AGENTIC-OS.md  README.md  commitlint.config.json
apps/frappe_armenia/: LICENSE-ARMOSPHERA.md  README.md  pyproject.toml
apps/frappe_armenia/frappe_armenia/: custom_fields.py  hooks.json  hooks.py  modules.txt  patches.txt
apps/frappe_armenia/frappe_armenia/armenia/report/am_vat_reconciliation/: am_vat_reconciliation.json  am_vat_reconciliation.py
apps/frappe_armenia/frappe_armenia/armenia/report/am_vat_return/: am_vat_return.py
apps/frappe_armenia/frappe_armenia/coa/: __init__.py  install_coa.py
apps/frappe_armenia/frappe_armenia/fixtures/: armenia_coa.json
apps/frappe_armenia/frappe_armenia/patches/: __init__.py
apps/frappe_armenia/frappe_armenia/patches/v0_1/: __init__.py  seed_armenian_coa.py
apps/frappe_armenia/frappe_armenia/regional/: __init__.py
apps/frappe_armenia/frappe_armenia/regional/doctype/: __init__.py
apps/frappe_armenia/frappe_armenia/regional/doctype/am_company_setup/: __init__.py  am_company_setup.json  am_company_setup.py
apps/frappe_armenia/frappe_armenia/regional/doctype/am_set..._log/: __init__.py  am_set..._log.json  am_set..._log.py
apps/frappe_armenia/frappe_armenia/regional/doctype/am_vat_settings/: __init__.py  am_vat_settings.json  (+1 more)
apps/frappe_armenia/frappe_armenia/report/am_vat_return/: am_vat_return.json
apps/frappe_armenia/frappe_armenia/setup_wizard/: __init__.py  log.py  on_company_created.py  run_setup.py
apps/frappe_armenia/frappe_armenia/tests/: __init__.py  test_account_name_hy.py  test_am_company_setup.py  test_am_vat_reconciliation.py  test_am_vat_return.py  test_am_vat_settings.py  test_coa.py  test_item_vat_template.py  test_purchase_vat_hook.py  test_seed_coa.py  test_setup_wizard.py  test_vat_validation_hook.py
apps/frappe_armenia/frappe_armenia/vat/: __init__.py
apps/frappe_uae/: LICENSE-ARMOSPHERA.md  README.md  pyproject.toml
apps/frappe_uae/frappe_uae/: custom_fields.py  hooks.py  patches.txt
apps/frappe_uae/frappe_uae/coa/: __init__.py  install_coa.py
apps/frappe_uae/frappe_uae/data/: uae_coa.json
apps/frappe_uae/frappe_uae/patches/: __init__.py
apps/frappe_uae/frappe_uae/patches/v0_1/: __init__.py  seed_uae_coa.py
apps/frappe_uae/frappe_uae/setup_wizard/: __init__.py  log.py  on_company_created.py  run_setup.py
apps/frappe_uae/frappe_uae/tests/: test_account_name_ar.py  test_ae_vat_201.py  test_ae_vat_settings.py  test_coa.py  test_item_vat_template.py  test_sales_vat_hook.py  test_setup_wizard.py
apps/frappe_uae/frappe_uae/vat/: __init__.py
libs/frappe_localization_core/: README.md  pyproject.toml
libs/frappe_localization_core/frappe_localization_core/: __init__.py  currency_format.py  iban_validator.py  iso20022_parser.py  mt940_parser.py  number_to_words.py  reconciliation.py
libs/frappe_localization_core/tests/: test_currency_format.py  test_iban_validator.py  test_iso20022_parser.py  test_mt940_parser.py  test_number_to_words.py  test_reconciliation.py
libs/frappe_payroll_engine/: README.md  pyproject.toml
libs/frappe_payroll_engine/frappe_payroll_engine/: __init__.py  calculator.py
libs/frappe_payroll_engine/tests/: test_calculator.py
(+265 files in other folders)
