[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "frappe_localization_core"
version = "0.1.1"
description = "Country-agnostic localization helpers for ERPNext custom apps (Armosphera)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Armosphera", email = "dev@armosphera.com" }]
dependencies = [
    "lxml>=5.0",
    "python-stdnum>=1.20",
    "num2words>=0.5.10",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
